boltffi_backend/tests/kotlin/snapshots/kotlin__exports__kotlin_target_preserves_unsigned_public_api_and_native_carriers.snap
---
source: boltffi_backend/tests/kotlin/exports.rs
expression: "rendered_fixture(\"exports/unsigned_functions\")"
---
===== com/boltffi/demo/Demo.kt =====
@file:OptIn(kotlin.ExperimentalUnsignedTypes::class)

package com.boltffi.demo
@Suppress("FunctionName")
private object Native {
    @JvmStatic external fun boltffi_function_demo_widen(byte: Byte, short_: Short, word: Int, wide: Long): Int
}

fun widen(byte: UByte, short: UShort, word: UInt, wide: ULong): UInt {
    return Native.boltffi_function_demo_widen(byte.toByte(), short.toShort(), word.toInt(), wide.toLong()).toUInt()
}
