boltffi_backend/tests/kotlin/snapshots/kotlin__exports__kotlin_target_renders_closure_result_returns.snap
---
source: boltffi_backend/tests/kotlin/exports.rs
expression: "rendered_fixture(\"exports/closure_result_return\")"
---
===== com/boltffi/demo/Demo.kt =====
@file:OptIn(kotlin.ExperimentalUnsignedTypes::class)

package com.boltffi.demo
@Suppress("FunctionName")
private object Native {
    @JvmStatic external fun boltffi_function_demo_apply(callback: Long, value: Int): Int
    @JvmStatic external fun boltffi_success_i32(returnOut: Long, value: Int): Unit
}

fun interface ClosureI32ToResultI32ErrMathError {
    fun invoke(arg0: Int): Int
}

private object ClosureI32ToResultI32ErrDemoMathErrorCallbacks {
    private val map = java.util.concurrent.ConcurrentHashMap<Long, ClosureI32ToResultI32ErrMathError>()
    private val counter = java.util.concurrent.atomic.AtomicLong(1L)

    fun insert(value: ClosureI32ToResultI32ErrMathError): Long {
        val handle = counter.getAndAdd(2L)
        map[handle] = value
        return handle
    }

    @JvmStatic
    fun free(handle: Long) {
        map.remove(handle)
    }

    @JvmStatic
    fun call(handle: Long, arg0: Int, return_out: Long): ByteArray {
        val impl = map[handle] ?: error("ClosureI32ToResultI32ErrDemoMathErrorCallbacks: invalid handle $handle")
        return try { run { Native.boltffi_success_i32(return_out, impl.invoke(arg0)); ByteArray(0) } } catch (__boltffi_closure_error: MathError) { run { val __boltffi_closure_wire = WireWriterPool.acquire(4); val __boltffi_closure_writer = __boltffi_closure_wire.writer; __boltffi_closure_writer.writeI32(__boltffi_closure_error.value); val __boltffi_closure_error_bytes = __boltffi_closure_wire.bytes(); __boltffi_closure_wire.close(); __boltffi_closure_error_bytes } }
    }
}


sealed class MathError(val value: Int) : Exception() {
    object InvalidInput : MathError(0)

    companion object {
        fun fromValue(value: Int): MathError =
            when (value) {
                0 -> InvalidInput
                else -> throw IllegalArgumentException("unknown MathError value: $value")
            }
    }
}

fun apply(callback: ClosureI32ToResultI32ErrMathError, value: Int): Int {
    return try { Native.boltffi_function_demo_apply(ClosureI32ToResultI32ErrDemoMathErrorCallbacks.insert(callback), value) } catch (__boltffi_error: BoltFfiErrorBufferException) { run { val __boltffi_error_reader = WireReader(__boltffi_error.bytes); throw MathError.fromValue(__boltffi_error_reader.readI32()) } }
}
